--- a/ansible/dump.sql.example
+++ b/ansible/dump.sql.example
@@ -21,7 +21,7 @@ CREATE TABLE `dispense` (
   `modify_date` datetime(6) DEFAULT NULL,
   `previous_sku` int(11) DEFAULT NULL,
   PRIMARY KEY (`id`)
-) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 
@@ -39,7 +39,7 @@ CREATE TABLE `eye` (
   `cylinder` float DEFAULT NULL,
   `sphere` float DEFAULT NULL,
   PRIMARY KEY (`id`)
-) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 
@@ -70,7 +70,7 @@ CREATE TABLE `glasses` (
   CONSTRAINT `FKn7g5jsbuiwnmpeh90i89y4gv0` FOREIGN KEY (`dispense_id`) REFERENCES `dispense` (`id`),
   CONSTRAINT `FKnnd7mfxvhrbjwv8p5xiswnai8` FOREIGN KEY (`os_id`) REFERENCES `eye` (`id`),
   CONSTRAINT `FKovw8a7k5pow8in36qh2k3t0ja` FOREIGN KEY (`od_id`) REFERENCES `eye` (`id`)
-) ENGINE=InnoDB AUTO_INCREMENT=0 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
 /*!40101 SET character_set_client = @saved_cs_client */;
 
 --
