--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -6,12 +6,13 @@
   import_playbook: plays/reims.yml
   vars:
     frontend_domain: "{{ inventory_hostname }}"
+    api_domain: "{{ 'api.' + inventory_hostname }}"
     db_name: "reims2-db"
     dokku_network_name: "reims2"
     frontend_app_name: "frontend"
     api_app_name: "api"
     docs_app_name: "docs"
-    backend_jwt_token: !vault |
+    api_jwt_token: !vault |
       $ANSIBLE_VAULT;1.1;AES256
       63626362646532353035376538656531656661353839663634636433376432303161653335333937
       6437656262643939303232666535666562623063636262380a346161383131356664616561313061
@@ -34,11 +35,12 @@
   import_playbook: plays/reims.yml
   vars:
     frontend_domain: "{{ 'dev.' + inventory_hostname }}"
+    api_domain: "{{ 'dev-api.' + inventory_hostname }}"
     db_name: "dev-db"
     dokku_network_name: "dev-reims2"
     frontend_app_name: "dev-frontend"
     api_app_name: "dev-api"
     docs_app_name: "dev-docs"
-    backend_jwt_token: "testtokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttoken"
+    api_jwt_token: "testtokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttoken"
     debug_enable: true
     db_dump: "{{ lookup('file', '../dump.sql', errors='warn') }}"
