--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -12,7 +12,7 @@
     frontend_app_name: "frontend"
     api_app_name: "api"
     docs_app_name: "docs"
-    api_jwt_token: !vault |
+    api_jwt_token: !vault | # TODO WRONG TOKEN HERE!
       $ANSIBLE_VAULT;1.1;AES256
       63626362646532353035376538656531656661353839663634636433376432303161653335333937
       6437656262643939303232666535666562623063636262380a346161383131356664616561313061
@@ -44,3 +44,14 @@
     api_jwt_token: "testtokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttoken"
     debug_enable: true
     db_dump: "{{ lookup('file', '../dump.sql', errors='warn') }}"
+
+- name: Setup monitoring
+  hosts: all
+  become: true
+  vars:
+    monitoring_domain: "{{ 'monitoring.' + inventory_hostname }}"
+    db_name: "reims2-db"
+    monitoring_db_password: # TODO
+  tasks:
+    - ansible.builtin.import_tasks: tasks/monitoring.yml
+      tags: monitoring
