--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -43,6 +43,8 @@
       34393135313537373965326338626638353661326133343836653435393964343736346530343135
       6665336566316538343635383639666164363030336437643633
     aws_bucket_name: reims2-backup
+  tags:
+    - reims-prod
 
 - name: Setup dev REIMS2
   hosts: all
@@ -60,6 +62,8 @@
     docs_app_name: "dev-docs"
     api_jwt_token: "testtokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttokentesttoken"
     debug_enable: true
+  tags:
+    - reims-dev
 
 - name: Setup monitoring
   hosts: all
@@ -69,7 +73,6 @@
     - monitoring
   vars:
     monitoring_domain: "{{ 'monitoring.' + inventory_hostname }}"
-    db_name: "reims2-db" # Creates a monitoring user for that dokku DB and exposes the DB on port 5000
     monitoring_db_password: !vault |
       $ANSIBLE_VAULT;1.1;AES256
       38346534326165633066363432363964653361623031363765663639343036616264653964346266
@@ -77,4 +80,10 @@
       37663365303839643930376430636661663035383261303461363862323034613031303632313732
       6563616565396262350a356562346661353431636138326236646233653965656464333436613233
       32666163343133373864643561346435366666666163343839343266613862303764
+    db_port_mapping:
+      # exposes dokku DB with 'name' to 'port' and creates a monitoring read only user for grafana config
+      - name: "reims2-db"
+        port: "5000"
+      - name: "dev-db"
+        port: "5001"
   tags: monitoring
