--- a/ansible/roles/reims/tasks/restore-db.yml
+++ b/ansible/roles/reims/tasks/restore-db.yml
@@ -3,7 +3,7 @@
   ansible.builtin.copy:
     content: "{{ db_dump }}"
     dest: /tmp/reims-dump.sql
-    mode: 0600
+    mode: "0600"
     owner: root
     group: root
     force: true
