fix a few minor bugs, new roles are working now. not tested on fresh system yet

--- a/ansible/roles/monitoring/handlers/main.yml
+++ b/ansible/roles/monitoring/handlers/main.yml
@@ -1,9 +1,9 @@
 - name: reload grafana
   ansible.builtin.service:
     name: grafana-server
-    state: reloaded
+    state: restarted
 
 - name: reload prometheus
   ansible.builtin.service:
     name: prometheus
-    state: reloaded
+    state: restarted
