--- a/ansible/roles/setup/tasks/main.yml
+++ b/ansible/roles/setup/tasks/main.yml
@@ -1,5 +1,3 @@
-- name: Print ip address
-  ansible.builtin.debug: var=ansible_default_ipv4.address
 - name: Set authorized SSH pubkeys from file
   ansible.posix.authorized_key:
     user: "{{ ansible_user }}"
@@ -64,6 +62,7 @@
     ssh_print_pam_motd: true
     ssh_max_auth_retries: 4
     sftp_umask: "0022"
+    ssh_allow_tcp_forwarding: true
   register: ssh_hardening
 
   # Not using notify handler because include_role doesn't support it. But we try to do it using var.changed
