use bridge network because of dokku struggles

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -17,6 +17,7 @@
     deploy_from_git: false
     frontend_domain: "{{ inventory_hostname }}"
     api_domain: "{{ 'api.' + inventory_hostname }}"
+    docs_domain: "{{ 'docs.' + inventory_hostname }}"
     db_name: "reims2-db"
     db_dump: false
     frontend_app_name: "frontend"
@@ -56,9 +57,11 @@
     - traefik
     - reims
   vars:
+    deploy_from_git: false
     db_dump: false
     frontend_domain: "{{ 'dev.' + inventory_hostname }}"
     api_domain: "{{ 'dev-api.' + inventory_hostname }}"
+    docs_domain: "{{ 'dev-docs.' + inventory_hostname }}"
     db_name: "dev-db"
     frontend_app_name: "dev-frontend"
     api_app_name: "dev-api"
