--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -13,6 +13,7 @@
     - common
     - reims
   vars:
+    deploy_from_git: false
     frontend_domain: "{{ inventory_hostname }}"
     api_domain: "{{ 'api.' + inventory_hostname }}"
     db_name: "reims2-db"
@@ -53,6 +54,7 @@
     - common
     - reims
   vars:
+    deploy_from_git: false
     frontend_domain: "{{ 'dev.' + inventory_hostname }}"
     api_domain: "{{ 'dev-api.' + inventory_hostname }}"
     db_name: "dev-db"
