--- a/ansible/roles/reims/tasks/main.yml
+++ b/ansible/roles/reims/tasks/main.yml
@@ -1,11 +1,3 @@
-- name: Ensure github.com is a known host for dokku user
-  ansible.builtin.lineinfile:
-    dest: /home/dokku/.ssh/known_hosts
-    create: true
-    state: present
-    line: "{{ lookup('pipe', 'ssh-keyscan -t rsa github.com') }}"
-    regexp: "^github\\.com"
-    mode: "0644"
 - name: dokku create apps
   dokku_app:
     app: "{{ item }}"
@@ -94,6 +86,13 @@
   dokku_proxy:
     app: "{{ docs_app_name }}"
     state: absent
+- name: Use nginx as proxy
+  command: dokku proxy:set {{ item }} nginx
+  loop:
+    - "{{ frontend_app_name }}"
+    - "{{ api_app_name }}"
+    - "{{ docs_app_name }}"
+
 - name: Start vector container for persistent logging
   ansible.builtin.command: dokku logs:vector-start
 - name: "Frontend: Configure persistent logging for all apps"
@@ -109,6 +108,13 @@
     owner: root
     group: root
     mode: "0644"
+- name: Restart apps to apply config
+  command: dokku ps:restart {{ item }}
+  loop:
+    - "{{ frontend_app_name }}"
+    - "{{ api_app_name }}"
+    - "{{ docs_app_name }}"
+  when: not deploy_from_git
 - name: Deploy apps from git (this takes up to 15 minutes total and will work even when failing with timeout)
   timeout: 300
   ignore_errors: true
@@ -131,6 +137,7 @@
         name: "{{ docs_app_name }}",
         repo: "https://github.com/reims2/reims2-docs",
       }
+  when: deploy_from_git
 
 - name: "Set letsencrypt mail"
   ansible.builtin.command: dokku letsencrypt:set --global email letsencrypt@kxlion.de
