--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -243,6 +243,7 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
+                            <haltOnFailure>false</haltOnFailure>
                             <rules>
                                 <rule>
                                     <element>BUNDLE</element>
