Fix port mapping in API

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.open-in-view=false
 
 # ------------------------------------------------
 
-server.port=9966
+server.port=${PORT:9966}
 server.servlet.context-path=/pvh/
 
 spring.messages.basename=messages/messages
