--- a/ansible/docker/docker-compose.yml
+++ b/ansible/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "2"
 services:
   proxy:
     image: docker.io/library/traefik:v2.10.1
@@ -11,10 +11,14 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.middlewares.compress.compress=true"
+      - "traefik.http.middlewares.https_redirect.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.https_redirect.redirectscheme.permanent=true"
+
 
     ports:
       - "80:80"
       - "8080:8080"
+      - "443:443"
 
     volumes:
       - "./dynamic_conf:/etc/traefik/dynamic_conf:ro"
@@ -23,14 +27,21 @@ services:
 
     command:
       - "--entryPoints.http.address=:80"
+      - "--entryPoints.https.address=:443"
       - "--entryPoints.traefik.address=:8080"
       - "--accesslog=false"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=reims2"
       - "--log.level=DEBUG"
       - "--api=true"
       - "--api.insecure=true"
       - "--api.dashboard=true"
+      - "--certificatesResolvers.le.acme.httpChallenge=true"
+      - "--certificatesResolvers.le.acme.email=letsencrypt@kxlion.de"
+      - "--certificatesResolvers.le.acme.storage=/etc/traefik/acme/acme.json"
+      - "--certificatesResolvers.le.acme.httpChallenge.entrypoint=http"
+
     networks:
       reims2:
   frontend:
@@ -41,21 +52,31 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.frontend.rule=Host(`localhost`)"
       - "traefik.http.routers.frontend.entrypoints=http"
+      - "traefik.http.routers.frontend.middlewares=compress"
     environment:
-      - "API_URL=http://backend:5000/pvh/api"
+      - "BASE_URL_BROWSER=http://localhost"
+      - "BASE_URL_INTERNAL=http://backend:5000"
     networks:
       reims2:
   backend:
     image: docker.io/reims2/reims2-backend:latest
     restart: always
     container_name: "backend"
+    depends_on:
+      - db
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=Host(`localhost`) && PathPrefix(`/pvh/api`)"
+      - "traefik.http.routers.backend.rule=Host(`localhost`) && PathPrefix(`/api`)"
       - "traefik.http.routers.backend.entrypoints=http"
+      - "traefik.http.routers.backend.middlewares=compress"
     environment:
       - "PVH_JWT_SECRET=dsndkjnakdjnasasdnasdkjwnqdjnqdnassjdaksjdnkajnsdkjnaskdjnaksjndkajsndknwkjdnqkjwndkqwdoqsdiwjeodejqwodjoj"
-      - "DATABASE_URL=mysql://root:root@db:3306/reims2-db"
+      - "PVH_DEBUG=true"
+      - "DATABASE_HOST=db"
+      - "DATABASE_PORT=3306"
+      - "DATABASE_NAME=reims2-db"
+      - "DATABASE_USER=reims2"
+      - "DATABASE_PASSWORD=reims2"
     networks:
       reims2:
       db:
@@ -67,34 +88,29 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.docs.rule=Host(`localhost`) && PathPrefix(`/docs`)"
       - "traefik.http.routers.docs.entrypoints=http"
+      - "traefik.http.routers.docs.middlewares=compress"
     networks:
       reims2:
-  whoami:
-    image: traefik/whoami
-    container_name: whoami
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`whoami.localhost`)"
-      - "traefik.http.routers.whoami.entrypoints=http"
-    networks:
-      reims2:
+
   db:
     image: docker.io/mariadb
     container_name: "db"
     restart: always
     environment:
       MARIADB_ROOT_PASSWORD: "root"
+      MARIADB_DATABASE: "reims2-db"
+      MARIADB_USER: "reims2"
+      MARIADB_PASSWORD: "reims2"
     volumes:
+      - ./dump.sql:/docker-entrypoint-initdb.d/reims2-db.sql
       - "./db:/var/lib/mysql"
+    ports:
+      - "3306:3306"
     networks:
-      reims2:
       db:
-
-
-
-
 
 
 networks:
   reims2:
+    name: reims2
   db:
