--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.open-in-view=false
 # ------------------------------------------------
 
 server.port=${PORT:9966}
-server.servlet.context-path=/pvh/
+server.servlet.context-path=/
 
 spring.messages.basename=messages/messages
 
