--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -21,7 +21,7 @@ spring.profiles.active=hsqldb,spring-data-jpa
 # ------------------------------------------------
 
 server.port=9966
-server.servlet.context-path=/pvh/
+server.servlet.context-path=/
 
 spring.messages.basename=messages/messages
 
