--- a/backend/src/main/resources/application-mysql.properties
+++ b/backend/src/main/resources/application-mysql.properties
@@ -1,9 +1,9 @@
 # MySQL config start
 #----------------------------------------------------------------
-spring.datasource.url = jdbc:${DATABASE_URL}
+spring.datasource.url = jdbc:mariadb://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 # Username and password are included in database url environment variable
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 
